Added few more projects

--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -76,8 +76,8 @@ First in College Examinations, 2002\\\\
 First in College Examinations, 2001\\
 
 \section{\sc Professional Experience}
-%{\bf Tri Infotech, Punjab}
-%{\em CEO} \hfill {\bf July, 2016 - Current}
+{\bf Tri Infotech, Punjab}
+{\em CEO} \hfill {\bf July, 2016 - Current}
 %
 %{\bf Web Studios, Punjab}
 %{\em CTO} \hfill {\bf April, 2016 - Current}
@@ -144,29 +144,45 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \section{\sc Professional Activities}
 
-\textbf{Developed \& Design} YuPlayGod Downloads (Official), a web app maintaining various ROM builds for YU series of smartphones
+\textbf{Developed \& Design} Optician Management System, a desktop app in Java which in use by many Opticians at my native place for managing Optical Inventory and Patients with their vision data
 
-\textbf{Developed \& Design} YuPlayGod Developers (Official), a web app for Project Highway by YU Televentures
+\textbf{Developed \& Design} Prabandhan, a desktop app in Java for managing Inventory of any business and is implemented at various business houses
 
-\textbf{Developed \& Design} Taxi Cab Dulles, a wesite for cab company in Dulles (US)
+\textbf{Developed \& Design} http://www.sgndetrust.org/, a web app in wordpress for Shri Guru Nanak Educational Trust
+
+\textbf{Developed \& Design} http://www.himtinstitute.com/, a web app in django frameworks for HIMT which also contains ERP for managing Admissions
+
+\textbf{Developed \& Design} http://www.triinfotech.in/, a web app in django and web2py Python frameworks for Tri Infotech Inc which also contains blog and Quiz app
+
+\textbf{Developed \& Design} http://playgoods.in/, an e-Commerce platform for selling Play Goods for Play Goods Inc India
+
+\textbf{Developed \& Design} YuPlayGod Downloads (Official) [http://download.yuplaygod.com/], a web app maintaining various ROM builds for YU series of smartphones
+
+\textbf{Developed \& Design} YuPlayGod Developers (Official) [http://developer.yuplaygod.com/], a web app for Project Highway by YU Televentures
+
+\textbf{Developed \& Design} http://www.taxicabdulles.com/, a wesite for cab company in Dulles (US)
+
+\textbf{Developed \& Design} http://www.mrsinghphotography.com/, a web app for professional photographer
 
 \textbf{Developed \& Design} PhotoBucketStudio, a web app for sharing professional photography work
 
-\textbf{Developed \& Design} Kespripane.com, a punjabi dictionary and search engine
+\textbf{Developed \& Design} http://www.kespripane.com/, a punjabi dictionary and search engine
 
 \textbf{Developed \& Design} Xtreme Sense, an android app for collecting and syncing human activity data using different sensors to cloud
 
-\textbf{Developed \& Design} The Possibility Engine for Thicket Labs LLC in hybrid technologies
+\textbf{Developed \& Design} http://tpengine.com/ is the web application for handling and implementing Fuzzy Cognitive Maps for real-time/life scenarios. It uses The Possibility Engine API as back engine. This is fully data-driven web application made in full-stack web framework Java Server Faces 2.2. The web container and server used to deploy this web app is Glassfish. The project is developed for  Thicket Labs LLC, NY
+
+\textbf{Developed \& Design} The Possibility Engine, a library for Fuzzy Cognitive Maps in Java for Thicket Labs LLC, NY
 
 \textbf{Developed} Inventory \& Stock Management System for an elecronic mall in .Net Technologies
 
 \textbf{Developed \& Design} APS (Automatic Profile Selector), an android app which sense the human activity and set profiles according to the preference set for the activity
 
-\textbf{Developed \& Design} www.drinking.dachb.com, a survey web app for collecting data of Binge drinkers
+\textbf{Developed \& Design} http://www.drinking.dachb.co/m, a survey web app for collecting data of Binge drinkers
 
-\textbf{Developed \& Design} cheal.info, a Computational Healcare (cHeal) Lab website for Lakehead University
+\textbf{Developed \& Design} http://cheal.info/, a Computational Healcare (cHeal) Lab website for Lakehead University
 
-\textbf{Developed} TECHN0VIBES 2015 - an IT Club website for managing various activities and for administrative purpose in Python/web2py https://itclub.pythonanywhere.com
+\textbf{Developed} TECHN0VIBES 2015/2016 - an IT Club website for managing various activities and for administrative purpose in Python/web2py https://itclub.pythonanywhere.com
 
 \textbf{Developed \& Design} Xtreme Power, an android for double tap or wave proximity sensor for making screen on and off
 
