Added more achievemts in Job and Projects

--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -78,6 +78,10 @@ First in College Examinations, 2001\\
 \section{\sc Professional Experience}
 {\bf Tri Infotech, Punjab}
 {\em CEO} \hfill {\bf July, 2016 - Current}
+
+{\bf Career Escorts, India}
+{\em CTO} \hfill {\bf July, 2017 - Current}
+
 %
 %{\bf Web Studios, Punjab}
 %{\em CTO} \hfill {\bf April, 2016 - Current}
@@ -143,6 +147,10 @@ Singh, R., Marwaha, H., Bhatia, A. 2012. The Projective Future of RFID in Indian
 Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner Using IT. RWITTT-2010. PCMSDCW, Jalandhar.
 
 \section{\sc Professional Activities}
+
+\textbf{Design, Develop \& Lead} Addo, a restaurant management cross-platform application for uengage.in 
+
+\textbf{Design \& Developed} GSTNext, a cross-platform and cloud based solution for GST with Inventory Management, Billing, and Accounts Management.
 
 \textbf{Developed \& Design} Optician Management System, a desktop app in Java which in use by many Opticians at my native place for managing Optical Inventory and Patients with their vision data
 
