--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -76,11 +76,6 @@ First in College Examinations, 2002\\\\
 First in College Examinations, 2001\\
 
 \section{\sc Professional Experience}
-{\bf Tri Infotech, Punjab}
-{\em CEO} \hfill {\bf July, 2016 - Current}
-
-{\bf Career Escorts, India}
-{\em CTO} \hfill {\bf July, 2017 - Current}
 
 %
 %{\bf Web Studios, Punjab}
@@ -92,6 +87,12 @@ First in College Examinations, 2001\\
 {\bf Micromax Informatics Ltd., 90-B, Sector 18, Gurgaon 122015, INDIA}
 {\em Technical Consultant} \hfill {\bf June, 2016 - Current}\\
 Consultation of various internals of development in Mobile and Web apps like {\em http://download.yuplaygod.com} and {\em http://developer.yuplaygod.com}
+
+{\bf Tri Infotech, Punjab}
+{\em CEO} \hfill {\bf July, 2016 - January, 2018}
+
+{\bf Career Escorts, India}
+{\em CTO} \hfill {\bf July, 2017 - January, 2018}
 
 {\bf Thicket Labs LLC, 67 West Street Brooklyn, NY 11222}
 {\em Senior Software Developer \& Project Manager} \hfill {\bf May, 2014 - March 2016}\\
@@ -148,9 +149,29 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \section{\sc Professional Activities}
 
+\textbf{Design, Develop \& Lead} Student Tracking System. A real-time student progress tracking system. The product is under construction which spans over web and mobile domains using MERNG stack
+
+\textbf{Design, Develop \& Lead} School Bus Tracking System. A real-time school bus tracking system for our client. The product is under construction which spans over web and mobile domains with GPS and Maps solutions. We are using MERNG stack for this solution
+
+\textbf{Design, Develop \& Lead} Language Lab - An Android App for the project mentioned
+
+\textbf{Design, Develop \& Lead} Language Lab - A Web App, a voice-recognition and synthesis system with language translation on run-time using bots. The product is developed in Meteor full-stack with GraphQL, React and Mongoose. We developed our own voice-recognition and synthesis system for this product
+
+\textbf{Design, Develop \& Lead} Bachpan SAP - An Android App (Student Assessment Programme), an ERP Solution for School Management, Employees, Students and Parents. The automation based software solution is capable of managing all resources of school with more than 15 modules.
+
+\textbf{Design, Develop \& Lead} Bachpan SAP - A Web App (Student Assessment Programme), an ERP Solution for School Management, Employees, Students and Parents. The automation based software solution is capable of managing all resources of school with more than 15 modules. The product is fully developed in Meteor framework on Full-stack with mix of Blaze and React
+
+\textbf{Project Lead} https://www.ahpshoshiarpur.com/, a website in wordpress for Academic Heights Public School, Hoshiarpur
+
+\textbf{Project Lead} https://www.bachpanhoshiarpur.com/, a website in wordpress for Bachpan School, Hoshiarpur
+
+\textbf{Design, Develop \& Lead} Career Escort, an Android App made using Cordova integration technology with Meteor for Real-time APIs.
+
+\textbf{Design, Develop \& Lead} Patron Career, a real-time job portal for managing jobs, hire \& recruitment, payroll management, job time-frame management and others. The product is developed in Meteor framework using a mix of Blaze and React front-end with Mongoose as back-end
+
 \textbf{Design, Develop \& Lead} Addo, a restaurant management cross-platform application for uengage.in 
 
-\textbf{Design \& Developed} GSTNext, a cross-platform and cloud based solution for GST with Inventory Management, Billing, and Accounts Management.
+\textbf{Design \& Developed} GSTNext, a cross-platform and cloud based solution for GST with Inventory Management, Billing, and Accounts Management
 
 \textbf{Developed \& Design} Optician Management System, a desktop app in Java which in use by many Opticians at my native place for managing Optical Inventory and Patients with their vision data
 
@@ -164,11 +185,11 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \textbf{Developed \& Design} http://playgoods.in/, an e-Commerce platform for selling Play Goods for Play Goods Inc India
 
-\textbf{Developed \& Design} YuPlayGod Downloads (Official) [http://download.yuplaygod.com/], a web app maintaining various ROM builds for YU series of smartphones
+\textbf{Developed \& Design} YuPlayGod Downloads (Official) [http://download.yuplaygod.com/], a web app for maintaining various ROM builds for YU series of smartphones
 
 \textbf{Developed \& Design} YuPlayGod Developers (Official) [http://developer.yuplaygod.com/], a web app for Project Highway by YU Televentures
 
-\textbf{Developed \& Design} http://www.taxicabdulles.com/, a wesite for cab company in Dulles (US)
+\textbf{Developed \& Design} http://www.taxicabdulles.com/, a website for cab company in Dulles (US)
 
 \textbf{Developed \& Design} http://www.mrsinghphotography.com/, a web app for professional photographer
 
@@ -214,13 +235,17 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \section{\sc Teaching Experience}
 
-Programming in C and C++ languages (8 times, since 2008)
+Programming in C and C++ languages (12 times, since 2008)
 
-Programming in Java (8 times, Since 2008)
+Programming in Java (12 times, since 2008)
+
+Web Designing (4 times, since 2008)
+
+Web Development using .Net (2 times, since 2008)
 
 Introduction to Computers \& IT (4 times, since 2008)
 
-Data Structure (3 times, since 2008)
+Data Structure (4 times, since 2008)
 
 Digital Systems Design (3 times, since 2008)
 
@@ -236,9 +261,12 @@ Special Summer Training \& Workshop on Python/Php/Java (For 4 weeks every summer
 
 \section{\sc Computer Skills}
 \begin{list2}
-\item Languages:  C, C++, Java, Python, Ruby, MATLAB, ASP.NET, C\#.NET, Unix Shell Scripting, HTML, CSS, JavaScript, jQuery, Bootstrap, PHP, XML, Rails Framework, Django Framework, web2py Framework, Meteor, JSF Framework, Laravel Framework, CodeIgnitor Framework, Fuzzy logic and Neural Network toolboxes in MATLAB\\
-\item Applications: \LaTeX, MySQL, MS-SQL Server, Apache Webserver, GlassFish Application \& Webserver, IIS, Spreadsheet, and Presentation software\\
-\item Operating Systems:  Unix/Linux, Windows, Mac\\
+\item Languages:  C, C++, Java, Python, Node, Ruby, MATLAB, ASP.NET, C\#.NET, Unix Shell Scripting, HTML, CSS, JavaScript, jQuery, Bootstrap, PHP, XML\\
+\item Frameworks/Libraries: React, React Native, Angular (2 Onwards), Vue.js, Meteor, Django Framework, Flask Micro-framework, Rails Framework, web2py Framework, JSF Framework, Laravel Framework, CodeIgnitor 2 Framework
+\item Machine Learning: Fuzzy logic and Neural Network toolboxes in MATLAB, all major APIs in Python and Java for Neural Networks, Fuzzy logic, Fuzzy Cognitive Maps  
+\item Databases, Servers \& Applications: Mongo, MySQL, Postgres, MS-SQL Server, Apache Webserver, GlassFish Application \& Webserver, Apache, Apache Tomcat, IIS, \LaTeX, Spreadsheet, and Presentation software\\
+\item Cloud Services: DigitalOcean, Heroku, AWS, Google Cloud
+\item Operating Systems:  Gnu/Linux (Primary), Unix (BSD), Windows, Mac\\
 \end{list2}
 
 \newpage
@@ -317,6 +345,10 @@ Special Summer Training \& Workshop on Python/Php/Java (For 4 weeks every summer
     \hline
     Shivam Nayyar & TCS, Chennai, India & Software Developer\\
     \hline
+	Hardeep Kaur & TCS, Gurugram, India & Software Developer\\
+	\hline
+	Saurab Saini & BlueJeans, Banglore, India & DevOps\\
+	\hline
     \end{tabular}
     
 \end{center}
