--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -39,12 +39,12 @@ Hoshiarpur, Punjab, INDIA 146001 & {\it E-mail:}  prof.ajaybhatia@gmail.com\\
 {\bf Punjab Technical University}, Jalandhar INDIA\\
 \vspace*{-.1in}
 \begin{list1}
-\item[] Pursuing Ph.D. Computer Science, September, 2012.
+\item[] Pursuing Ph.D. Computer Science, September, 2012 (\textit{Pre-Thesis}).
 \begin{list2}
 \vspace*{.05in}
 \item Dissertation Topic:  ``Pattern Analysis of Physical Activity Data using Computational Approach''
 \item Advisor:  Rajeshwar Singh, Ph.D., Campus Director, DKTGI, Shaheed Bhagat Singh Nagar, Punjab, INDIA
-\item Co-Advisor:  Vijay Mago, Ph.D., Assistant Professor, Lake Head University, Thunder Bay, ON P7B 5E1, Canada
+%\item Co-Advisor:  Vijay Mago, Ph.D., Assistant Professor, Lake Head University, Thunder Bay, ON P7B 5E1, Canada
 \end{list2}
 \end{list1}
 
@@ -65,6 +65,9 @@ Hoshiarpur, Punjab, INDIA 146001 & {\it E-mail:}  prof.ajaybhatia@gmail.com\\
 \begin{list1}
 \item[] B.Sc.(Information Technology),  May, 2004
 \end{list1}
+
+{\bf Machine Learning (\textit{Coursera})}, Stanford University, USA, Fall Summers 2015\\
+\vspace*{-.1in}
 
 \section{\sc Honors and Awards}
 B.Sc.(Information Technology) with Disctinction, 2004\\\\
@@ -235,7 +238,7 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \section{\sc Teaching Experience}
 
-Programming in C and C++ languages (12 times, since 2008)
+Programming in C and C++ languages (17 times, since 2008)
 
 Programming in Java (12 times, since 2008)
 
