Fix for out of page

--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -260,25 +260,23 @@ Database Management System (2 times, since 2008)
 
 E-Commerce with Practical Implementation (1 times, since 2011)
 
-Special Summer Training \& Workshop on Python/Php/Java (For 4 weeks every summers, since 2011)
+Special Summer Training \& Workshop on Python/Php/Java (4 weeks every summers, since 2011)
 
 \section{\sc Computer Skills}
 \begin{list2}
 \item Languages:  C, C++, Java, Python, Node, Ruby, MATLAB, ASP.NET, C\#.NET, Unix Shell Scripting, HTML, CSS, JavaScript, jQuery, Bootstrap, PHP, XML\\
-\item Frameworks/Libraries: React, React Native, Angular (2 Onwards), Vue.js, Meteor, Django Framework, Flask Micro-framework, Rails Framework, web2py Framework, JSF Framework, Laravel Framework, CodeIgnitor 2 Framework
+\item Frameworks/Libraries: React, React Native, Angular (2 Onwards), Vue.js, Meteor, Django Framework, Flask Micro-framework, Rails Framework, web2py Framework, JSF Framework, Laravel Framework, CodeIgnitor 2 Framework\\
 \item Machine Learning: Fuzzy logic and Neural Network toolboxes in MATLAB, all major APIs in Python and Java for Neural Networks, Fuzzy logic, Fuzzy Cognitive Maps  
 \item Databases, Servers \& Applications: Mongo, MySQL, Postgres, MS-SQL Server, Apache Webserver, GlassFish Application \& Webserver, Apache, Apache Tomcat, IIS, \LaTeX, Spreadsheet, and Presentation software\\
-\item Cloud Services: DigitalOcean, Heroku, AWS, Google Cloud
+\item Cloud Services: DigitalOcean, Heroku, AWS, Google Cloud\\
 \item Operating Systems:  Gnu/Linux (Primary), Unix (BSD), Windows, Mac\\
 \end{list2}
 
 \newpage
 
-\section{\sc Graduate Student}
-
-
+\section{\sc Graduate Students}
 \begin{center}
-    \begin{tabular}{ | p{3cm} | p{5cm} | l | }
+    \begin{tabular}{ | p{3cm} | p{5.30cm} | l | }
     \hline
     \textbf{Student name} & \textbf{Organization} & \textbf{Designation}\\
     \hline
@@ -353,7 +351,7 @@ Special Summer Training \& Workshop on Python/Php/Java (For 4 weeks every summer
 	Saurab Saini & BlueJeans, Banglore, India & DevOps\\
 	\hline
     \end{tabular}
-    
+
 \end{center}
 
 \end{resume}
