--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -87,8 +87,11 @@ First in College Examinations, 2001\\
 %{\bf Om Infotech, Punjab}
 %{\em CTO \& Partner} \hfill {\bf April, 2016 - Current}
 
+{\bf Google, INDIA}
+{\em Machine Learning Crash Course Facilitator} \hfill {\bf August, 2018 - Present}
+
 {\bf Micromax Informatics Ltd., 90-B, Sector 18, Gurgaon 122015, INDIA}
-{\em Technical Consultant} \hfill {\bf June, 2016 - Current}\\
+{\em Technical Consultant} \hfill {\bf June, 2016 - December, 2017}\\
 Consultation of various internals of development in Mobile and Web apps like {\em http://download.yuplaygod.com} and {\em http://developer.yuplaygod.com}
 
 {\bf Tri Infotech, Punjab}
@@ -151,6 +154,10 @@ Singh, R., Marwaha, H., Bhatia, A. 2012. The Projective Future of RFID in Indian
 Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner Using IT. RWITTT-2010. PCMSDCW, Jalandhar.
 
 \section{\sc Professional Activities}
+
+\textbf{Design, Develop \& Lead} GreatJobs {\em Work in Progress}. A Job Portal for Canada based Job Consultancy company.
+
+\textbf{Designn, Develop \& Lead} Event Ticket Reservation System {\em Work in Progress}. An ubiquitous ticket reservation system for a Canadian company. 
 
 \textbf{Design, Develop \& Lead} Student Tracking System. A real-time student progress tracking system. The product is under construction which spans over web and mobile domains using MERNG stack
 
@@ -260,6 +267,8 @@ Database Management System (2 times, since 2008)
 
 E-Commerce with Practical Implementation (1 times, since 2011)
 
+Given special trainings on various top notch technologies and frameworks (since 2008)
+
 Special Summer Training \& Workshop on Python/Php/Java (4 weeks every summers, since 2011)
 
 \section{\sc Computer Skills}
@@ -276,7 +285,7 @@ Special Summer Training \& Workshop on Python/Php/Java (4 weeks every summers, s
 
 \section{\sc Graduate Students}
 \begin{center}
-    \begin{tabular}{ | p{3cm} | p{5.30cm} | l | }
+    \begin{tabular}{ | p{3cm} | p{5.70cm} | l | }
     \hline
     \textbf{Student name} & \textbf{Organization} & \textbf{Designation}\\
     \hline
@@ -350,7 +359,9 @@ Special Summer Training \& Workshop on Python/Php/Java (4 weeks every summers, s
 	\hline
 	Saurab Saini & BlueJeans, Banglore, India & DevOps\\
 	\hline
-    \end{tabular}
+	Vikrant Chowdary & Amazon, Hyderabad, India & Logistic Manager\\
+	\hline    
+	\end{tabular}
 
 \end{center}
 
