--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -88,7 +88,10 @@ First in College Examinations, 2001\\
 %{\em CTO \& Partner} \hfill {\bf April, 2016 - Current}
 
 {\bf Google, INDIA}
-{\em Machine Learning Crash Course Facilitator} \hfill {\bf August, 2018 - Present}
+{\em Google Cloud Platform Facilitator} \hfill {\bf January, 2019 - Present}
+
+{\bf Google, INDIA}
+{\em Machine Learning Crash Course Facilitator} \hfill {\bf August, 2018 - December, 2018}
 
 {\bf Micromax Informatics Ltd., 90-B, Sector 18, Gurgaon 122015, INDIA}
 {\em Technical Consultant} \hfill {\bf June, 2016 - December, 2017}\\
@@ -155,7 +158,15 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \section{\sc Professional Activities}
 
-\textbf{Design, Develop \& Lead} GreatJobs {\em Work in Progress}. A Job Portal for Canada based Job Consultancy company.
+\textbf{Design \& Develop} BookZilla {\em Work in progress}. A multiplatform punjabi literature sharing platform developing in GraphQL(Apollo), React.js and React native.
+
+\textbf{Design \& Develop} CoachWiz {\em Work in progress}. A multiplatform video portal publishing videos on coaching of various sports by renowned coaches nationwide using GraphQL(Apollo), Meteor, React.js and React native. 
+
+\textbf{Design \& Develop} BidMyStay. Mobile applications for both Android and iOS for Booking Properties, Villas, Hotels, and other accommodations on the basis of Bid placed using React native.
+
+\textbf{Design, Develop \& Lead} ADMS {\em Work in progress}. An e-commerce platform to sell medicinal drugs developing in Meteor Platform as backend and React/Redux as frontend.
+
+\textbf{Design, Develop \& Lead} GreatJobs {\em https://www.greatjobsamerica.com/}. A Job Portal for Canada based Job Consultancy company.
 
 \textbf{Designn, Develop \& Lead} Event Ticket Reservation System {\em Work in Progress}. An ubiquitous ticket reservation system for a Canadian company. 
 
@@ -245,17 +256,17 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \section{\sc Teaching Experience}
 
-Programming in C and C++ languages (17 times, since 2008)
+Programming in C and C++ languages (19 times, since 2008)
 
-Programming in Java (12 times, since 2008)
+Programming in Java (14 times, since 2008)
 
-Web Designing (4 times, since 2008)
+Web Designing (6 times, since 2008)
 
 Web Development using .Net (2 times, since 2008)
 
 Introduction to Computers \& IT (4 times, since 2008)
 
-Data Structure (4 times, since 2008)
+Data Structure (5 times, since 2008)
 
 Digital Systems Design (3 times, since 2008)
 
@@ -263,13 +274,13 @@ Operating System (2 times, since 2008)
 
 Computer Graphics (1 time, since 2008)
 
-Database Management System (2 times, since 2008)
+Database Management System (3 times, since 2008)
 
 E-Commerce with Practical Implementation (1 times, since 2011)
 
 Given special trainings on various top notch technologies and frameworks (since 2008)
 
-Special Summer Training \& Workshop on Python/Php/Java (4 weeks every summers, since 2011)
+Special Summer Training \& Workshop on Python/Php/Java/ES5+ (4 weeks every summers, since 2011)
 
 \section{\sc Computer Skills}
 \begin{list2}
@@ -299,7 +310,7 @@ Special Summer Training \& Workshop on Python/Php/Java (4 weeks every summers, s
     \hline
     Richa Puri & Guru Nanak Khalsa College, Sultanpur Lodhi, India & Assistant Professor\\
     \hline
-	Simarjit Singh & DIPS College, Begowal, India & Assistant Professor\\
+	Simarjit Singh & SGTBIMIT, Jalandhar, India & Assistant Professor\\
     \hline
     Sumit Sehgal & Doaba College, Jalandhar, India & Assistant Professor\\
     \hline
@@ -360,6 +371,8 @@ Special Summer Training \& Workshop on Python/Php/Java (4 weeks every summers, s
 	Saurab Saini & BlueJeans, Banglore, India & DevOps\\
 	\hline
 	Vikrant Chowdary & Amazon, Hyderabad, India & Logistic Manager\\
+	\hline
+	Harpreet Singh & St. Joseph School, India & Computer Teacher\\
 	\hline    
 	\end{tabular}
 
