--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -70,6 +70,16 @@ Hoshiarpur, Punjab, INDIA 146001 & {\it E-mail:}  prof.ajaybhatia@gmail.com\\
 \vspace*{-.1in}
 
 \section{\sc Honors and Awards}
+Guest Speaker, Google Flutter, KCLIMIT, Jalandhar, 2019\\\\
+Guest Speaker, Google Flutter, KMSCITM, Dasuya, 2019\\\\
+Guest Speaker, Google Flutter, SGTBIMIT, Jalandhar, 2019\\\\
+Guest Speaker, Web \& Mobile Trends in 2019, IKGPTU, Hoshiarpur Campus, 2019\\\\
+Guest Speaker, Google Cloud Platform, SGTBIMIT, Jalandhar, 2019\\\\
+Best Contributor, Education \& Admissions, RBGI, 2019,
+Guest Speaker, Google Cloud Platform, KCLIMIT, Jalandhar, 2018\\\\
+Voter Awareness, Voter Carnival, District Adminstration, 2017\\\\
+Best Motivator, District Administration \& District Welfare, 2016\\\\
+Technology Contributor, ERP System, CT Group, Jalandhar, 2009\\\\
 B.Sc.(Information Technology) with Disctinction, 2004\\\\
 Fourth Position earned in B.Sc., (Information Technology), 2004\\\\
 First in College in Univeristy Examination, 2004\\\\
@@ -88,7 +98,13 @@ First in College Examinations, 2001\\
 %{\em CTO \& Partner} \hfill {\bf April, 2016 - Current}
 
 {\bf Google, INDIA}
-{\em Google Cloud Platform Facilitator} \hfill {\bf January, 2019 - Present}
+{\em Google Community Lead} \hfill {\bf September, 2019 - Present}
+
+{\bf Vaibhav Associates \& Lets Play Coding, INDIA}
+{\em CTO} \hfill {\bf January, 2017 - Present}
+
+{\bf Google, INDIA}
+{\em Google Cloud Platform Facilitator} \hfill {\bf January, 2019 - August, 2019}
 
 {\bf Google, INDIA}
 {\em Machine Learning Crash Course Facilitator} \hfill {\bf August, 2018 - December, 2018}
@@ -113,8 +129,8 @@ Designed and Developed {\em The Possibilty Engine} - A comprehensive solution to
 {\bf Rayat Bahra Institute of Management}, Hoshiarpur, Punjab INDIA
 
 \vspace{-.3cm}
-{\em Associate Professor, Department of Management \& IT} \hfill {\bf July, 2010 - present}\\
-Head of Department(IT), Teaching graduate and postgraduate courses in IT
+{\em Head \& Associate Professor, Department of Computer Applications} \hfill {\bf July, 2010 - present}\\
+Administration, Head of Department, Mentoring, Motivator, Technology Advisor, Teaching graduate and postgraduate courses in IT
 
 {\bf CT Institute of Management \& IT}, Jalandhar, Punjab INDIA
 
@@ -126,6 +142,7 @@ Taught graduate and postgraduate courses in IT
 Android Platform, Medical Informatics, Decision making, Mathematical modelling, Fuzzy systems, Optimization techniques, Linux Kernel tunning and optimization
 
 \section{\sc Refereed Articles}
+Singh, R., Singh, R., Bhatia, A. 2018. \emph{Sentiment analysis using machine learning techniques to predict outbreaks and epidemics}, International Journal of Advanced Science and Research, 3(2), pp 19-24.
 
 Bhatia, A., Singh, R. 2012. \emph{Using Bayesian Network as Decision making system tool for deciding treatment plan for Dental caries}, Journal of Academic and Industrial Research, 2(2), pp 119-122.
 
@@ -136,6 +153,8 @@ Mago, V.K., Mago, A., Bhatia, A., Bhatia, N. 2012. \emph{Clinical Decision Suppo
 Singh, R., Marwaha, H., Bhatia, A. 2012. \emph{The Projective Future of RFID in Indian Shopping Malls}, International Journal of Science \& Emerging Technologies with Latest Trends, 1(1), pp 70-73. 
 
 Bhatia, A., Singh, R., Mago, V.K. 2011. \emph{A Decision Making System for the Treatment of Fractured Tooth}, Journal of Computer Science, 1(2), pp 1-3.
+
+Mago, V.K., Devi, S., Bhatia, A., Mehta, R. 2010. \emph{Using Probabilistic Neural Network to Select a Medical Specialist Agent}, Multi-Agent Systems for Healthcare Simulation and Modeling: Applications for System Improvement, USA. pp 164-177
 
 Mago, V.K., Bhatia, A., Prasad,  B., Mago, A. 2009. \emph{A Fuzzy Expert System for Decision Making in the Treatment of Broken Tooth}, International Conference on Artificial Intelligence and Pattern Recognition. Florida, USA. pp 268-277
 
@@ -158,17 +177,23 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \section{\sc Professional Activities}
 
-\textbf{Design \& Develop} BookZilla {\em Work in progress}. A multiplatform punjabi literature sharing platform developing in GraphQL(Apollo), React.js and React native.
-
 \textbf{Design \& Develop} CoachWiz {\em Work in progress}. A multiplatform video portal publishing videos on coaching of various sports by renowned coaches nationwide using GraphQL(Apollo), Meteor, React.js and React native. 
-
-\textbf{Design \& Develop} BidMyStay. Mobile applications for both Android and iOS for Booking Properties, Villas, Hotels, and other accommodations on the basis of Bid placed using React native.
 
 \textbf{Design, Develop \& Lead} ADMS {\em Work in progress}. An e-commerce platform to sell medicinal drugs developing in Meteor Platform as backend and React/Redux as frontend.
 
+\textbf{Design \& Develop} Araman {\em https://aramancompany.in/}. A website for Araman Company which produces agricultural machineries and have client-base worldwide.
+
+\textbf{Design \& Develop} New Wave Immigration {\em http://newwaveimmigration.com/}. A website for visa immigration services working for student and professional based immigrations throughout the world.
+
+\textbf{Design \& Develop} BookZilla. A multiplatform punjabi literature sharing platform developing in GraphQL(Apollo), React.js and React native.
+
+\textbf{Designn, Develop \& Lead} Event Ticket Reservation System {\em http://emgtickets.com/}. An ubiquitous ticket reservation system for a Canadian company.
+
+\textbf{Design \& Develop} BidMyStay. Mobile applications for both Android and iOS for Booking Properties, Villas, Hotels, and other accommodations on the basis of Bid placed using React native.
+
 \textbf{Design, Develop \& Lead} GreatJobs {\em https://www.greatjobsamerica.com/}. A Job Portal for Canada based Job Consultancy company.
 
-\textbf{Designn, Develop \& Lead} Event Ticket Reservation System {\em Work in Progress}. An ubiquitous ticket reservation system for a Canadian company. 
+\textbf{Design \& Develop} Gentek Power {\em https://www.gentekpowerworld.com/}. A website for Gentek Power Company which produces industrial, commercial and home gensets.
 
 \textbf{Design, Develop \& Lead} Student Tracking System. A real-time student progress tracking system. The product is under construction which spans over web and mobile domains using MERNG stack
 
@@ -255,6 +280,8 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 \textbf{Developed} website for Tech Miller, UK (Now Non-functional)
 
 \section{\sc Teaching Experience}
+
+Project Work (22 times, since 2008)
 
 Programming in C and C++ languages (19 times, since 2008)
 
@@ -367,6 +394,8 @@ Special Summer Training \& Workshop on Python/Php/Java/ES5+ (4 weeks every summe
     Shivam Nayyar & TCS, Chennai, India & Software Developer\\
     \hline
 	Hardeep Kaur & TCS, Gurugram, India & Software Developer\\
+	\hline
+	Vaihbav Anchal & T \& G Web Solutions Ltd, India & Web Developer\\
 	\hline
 	Saurab Saini & BlueJeans, Banglore, India & DevOps\\
 	\hline
