Updations of last 6 months

--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -144,7 +144,7 @@ Android Platform, Medical Informatics, Decision making, Mathematical modelling, 
 \section{\sc Refereed Articles}
 Singh, R., Singh, R., Bhatia, A. 2018. \emph{Sentiment analysis using machine learning techniques to predict outbreaks and epidemics}, International Journal of Advanced Science and Research, 3(2), pp 19-24.
 
-Bhatia, A., Singh, R. 2012. \emph{Using Bayesian Network as Decision making system tool for deciding treatment plan for Dental caries}, Journal of Academic and Industrial Research, 2(2), pp 119-122.
+Bhatia, A., Singh, R. 2012. \emph{Using Bayesian Network as Decision making system tool for deciding treatment plan for Dental caries}, Journal of Academic and Industrial Research, 2(2), pp 119-122.\\
 
 Bhatia, A., Singh, R. 2012. \emph{Backpropagation Multilayer Feedforward Neural Network for deciding treatment for broken Tooth}, Journal of Academic and Industrial Research, 2(2), pp 93-96.
 
@@ -177,15 +177,21 @@ Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner
 
 \section{\sc Professional Activities}
 
+\textbf{Design \& Develop} OnThisDay {\em Available on Playstore}. A history tracking app which shows various events happened on specific day ranging from births, deaths, anniverseries to all historical events. Typescript, ApolloServer, ApolloClient, web-scarping and React Native are used as main technologies.\\  
+
+\textbf{Develop} emotify {\em https://www.goemotify.com/}. Reaction and user engagement tool for online publishers, news websites and blogs, powered by AI. It is basically EMOTIONAL INTELLIGENCE FOR YOUR WEBSITE. The product is owned by Emotify. The new avatar is in development using various cutting edge technological stacks. 
+
+\textbf{Design \& Develop} B-Buddy. A very simple mobile application to find donors around us using location proximity. The app is developed using Google Firebase and React Native. 
+
 \textbf{Design \& Develop} CoachWiz {\em Work in progress}. A multiplatform video portal publishing videos on coaching of various sports by renowned coaches nationwide using GraphQL(Apollo), Meteor, React.js and React native. 
 
-\textbf{Design, Develop \& Lead} ADMS {\em Work in progress}. An e-commerce platform to sell medicinal drugs developing in Meteor Platform as backend and React/Redux as frontend.
+\textbf{Design, Develop \& Lead} ADMS. An e-commerce platform to sell medicinal drugs developing in Meteor Platform as backend and React/Redux as frontend.
 
 \textbf{Design \& Develop} Araman {\em https://aramancompany.in/}. A website for Araman Company which produces agricultural machineries and have client-base worldwide.
 
 \textbf{Design \& Develop} New Wave Immigration {\em http://newwaveimmigration.com/}. A website for visa immigration services working for student and professional based immigrations throughout the world.
 
-\textbf{Design \& Develop} BookZilla. A multiplatform punjabi literature sharing platform developing in GraphQL(Apollo), React.js and React native.
+\textbf{Design \& Develop} Bookosh. A multiplatform punjabi literature sharing platform developing in GraphQL(Apollo), React.js and React native.
 
 \textbf{Designn, Develop \& Lead} Event Ticket Reservation System {\em http://emgtickets.com/}. An ubiquitous ticket reservation system for a Canadian company.
 
